# payready-ai

./: .envrc  .gitignore  .pre-commit-config.yaml  .tmux.conf  AGNO_INTEGRATION_STATUS.md  AGNO_MEMORY_IMPLEMENTATION.md  AI_AGENT_RULES.md  API_KEY_TEST_REPORT.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_OUTLINE.md  AUDIT_ACTION_PLAN.md  CODEX_START.md  COMPLETE_OFFLINE_SETUP_PROMPT.md  COMPREHENSIVE_API_TEST_REPORT.md  DEPENDENCY_AUDIT.md  ENVIRONMENT_REPORT.md  GPT5_AUDIT_PROMPT.md  HANDOFF_OBSERVATIONS.md  HARDENING_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_V2.md  LIVE_DEVELOPMENT_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.md  Makefile  OFFLINE_SETUP_COMPLETE.md  PORTKEY_TO_OPENROUTER_MIGRATION_PLAN.md  PRODUCTION_READY_STATUS.md  README.md  ROLLOUT_SUMMARY.md  TEKTON_CLI_STATUS.md  Tmuxfile  UNIFIED_AI_INTEGRATION_ARCHITECTURE.md  WEB_ACCESS_CURRENT.md  WEB_ACCESS_IMPLEMENTATION_PLAN.md  activate.sh  activate_dev_env.sh  deploy_local.sh  payready_cli.py  pyproject.toml  requirements.txt  (+4 more)
agno/: __init__.py  agent.py  memory.py  team.py
agno/models/: anthropic.py  groq.py  openai.py
agno/tools/: __init__.py  python.py  shell.py
artifacts/test/: plan.json  research.json
cli/: __init__.py  cli.py  config.py  config_v2.py  keys.py  providers.py  secrets.py
cli/agents/: __init__.py  _io.py  agno.py  claude.py  codex.py  context.py  metadata.py  result.py
cli/research/: __init__.py  providers.py
config/: agents.toml  logging.toml  portkey_setup.md  ports.env  research.env.example
core/: agent_factory.py  jury.py  memory.py  memory_manager.py  reflexion.py  runtime.py  unified_memory.py
core/llm_client/: aimlapi_client.py  codex_client.py  openrouter_client.py  portkey_client.py
core/schemas/: artifacts.py
data/: rag_cache.json
docs/: DOCUMENTATION_SYSTEM.md  INDEX.md  INTEGRATION_SUMMARY.md  SETUP_TERMINAL.md  diamond_v5_cli.md
docs/ARCHITECTURE/: AI_CODING_STANDARDS.md  CLI_UNIFIED_AI_ARCHITECTURE.md  CURRENT_IMPLEMENTATION.md  FINAL_UNIFIED_SYSTEM.md  SCALING_ARCHITECTURE.md  UNIFIED_AI_INTEGRATION_ARCHITECTURE.md
docs/GUIDES/: SETUP_GUIDE.md
docs/OPERATIONS/: AUDIT_REPORT.md  CHANGELOG.md  CURRENT_STATE.md
docs/REFERENCES/: CLI_REFERENCE.md
docs/tekton/: ARCHITECTURE.md  CLI_ROUTING.md
gateway/: main.py
local_rag/: api.py  basic_index.py  index.py  simple_index.py  weaviate_index.py
orchestrator/: sophia.py  sophia_simple.py
payready/: __init__.py  cli.py
policies/rbac/: roles.yaml
scripts/: README.md  command_logger.sh  consolidate_env.sh  consolidate_env_proper.sh  dev.sh  doctor.sh  index_repo.py  ingest_memory.py  init_session.sh  migrate-to-unified.sh  rotate_memory.sh  setup_local.sh  smoke_cli.sh  verify_env.py
services/: cache.py  context_manager.py  service_stubs.py
services/connectors/: apollo.py  slack.py
tekton/: cli.py  swarm.py
tests/: test_agent_io.py  test_agno_integration.py  test_artifacts.py  test_cli_context.py  test_context_manager.py  test_main_cli.py  test_memory_system.py  test_privacy_policy.py  test_routing.py
tools/: agent_dup_check.py
(+14 files in other folders)
