[project]
name = "payready-ai"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.*",
  "uvicorn[standard]==0.30.*",
  "pydantic==2.*",
  "requests==2.*",
  "pyyaml==6.*",
  "pandas>=2.2",
  "sentence-transformers==3.*",
  "milvus-lite>=2.4.1",
  "httpx==0.27.2",
  "python-dotenv==1.*",
  "langgraph==0.2.*",
  "psycopg[binary]>=3.2",
  "agentops>=0.3.0",
]

[dependency-groups]
dev = ["pre-commit==3.*", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway", "orchestrator", "services", "tools", "local_rag", "bi"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
