[project]
name = "payready-ai"
version = "3.0.0"
description = "Unified AI CLI system for PayReady operations"
authors = [{name = "PayReady Engineering", email = "engineering@payready.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.2",
    "typer>=0.12.3",
    "redis>=5.0.0",
    "milvus-lite>=2.4.1",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "tiktoken>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdown>=3.4.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "pygments>=2.15.0",
    "jsonpatch>=1.33",
    "cryptography>=41.0.0",
    "tqdm>=4.65.0",
    "orjson>=3.9.0",
    "uvloop>=0.17.0",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2",
    "agentops>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.5.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
]

docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
payready = "payready.cli:main"
tekton = "tekton.cli:main"
ai = "payready_cli:main"
payready-ai = "payready_cli:main"
payready-memory = "payready_cli:memory"
payready-cli = "cli.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "gateway",
    "orchestrator",
    "services",
    "tools",
    "local_rag",
    "bi",
    "core",
    "tekton",
    "payready",
    "swarms",
    "cli",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
